--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
+    "@types/passport-google-oauth20": "^2.0.2",
     "@types/swagger-jsdoc": "^3.0.1",
     "@types/swagger-ui-express": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
@@ -40,11 +41,13 @@
   "dependencies": {
     "@nestjs/common": "^6.5.3",
     "@nestjs/core": "^6.5.3",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/swagger": "^3.1.0",
-    "@nestjs/typeorm": "^6.1.3",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2",
     "swagger-ui-express": "^4.0.2",
