--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "maorRoz",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
     "@types/passport-google-oauth20": "^2.0.2",
+    "@types/passport-jwt": "^3.0.2",
     "@types/swagger-jsdoc": "^3.0.1",
     "@types/swagger-ui-express": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
@@ -41,13 +43,16 @@
   "dependencies": {
     "@nestjs/common": "^6.5.3",
     "@nestjs/core": "^6.5.3",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/swagger": "^3.1.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2",
     "swagger-ui-express": "^4.0.2",
