--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "maorRoz",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.15",
@@ -44,6 +45,7 @@
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/swagger": "^3.1.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
     "passport": "^0.4.0",
