--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/express-session": "^1.15.14",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.15",
     "@types/lodash": "^4.14.136",
@@ -49,6 +50,7 @@
     "@nestjs/swagger": "^3.1.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "lodash": "^4.17.15",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
